fix compiler warnings after update to Java 11
Signed-off-by: Andre Bossert <anb0s@anbos.de>